# candle_xps

./: .gitignore  README.md
py/: main.py  pyproject.toml
py/rfdetr/: CITATION.cff  README.md  describe_onnx.py  download_coco.py  eval_study.py  export.py  export_onnx.py  export_safetensors.py  predict.py  predict_study.py  pyproject.toml
py/rfdetr/rfdetr/: __init__.py  config.py  detr.py  engine.py  main.py
py/rfdetr/rfdetr/util/: benchmark.py  box_ops.py
py/torch_study/: README.md  conv2d.py
rs/: Cargo.toml  README.md
rs/candle_conv/: Cargo.toml  issue.md
rs/candle_conv/src/: main.rs
rs/candle_rf_detr/: Cargo.toml  README.md  eval_results.md
rs/candle_rf_detr/src/: cmd_eval.rs  cmd_predict.rs  coco_classes.rs  coco_eval.rs  config.rs  debug.rs  detection.rs  dino2.rs  eval.rs  main.rs  model.rs  pos_enc.rs  predict.rs  preprocess.rs  projector.rs  query_embed.rs  transformer.rs
rs/candle_rf_detr/src/model/: dino2.rs  dino2w.rs  mod.rs  pos_enc.rs  projector.rs  query_embed.rs  segmentation_head.rs  transformer.rs
rs/candle_yolov8/: Cargo.toml  README.md
rs/candle_yolov8/src/: main.rs  model.rs
rs/cocotools/: Cargo.toml  README.md
rs/cocotools/src/: lib.rs
