[package]
name = "candle_conv"
version = "0.1.0"
edition = "2021"

[dependencies]
# candle-core = { version = "0.9.1", features = ["cuda", "cudnn"] }
# candle-nn = { version = "0.9.1", features = ["cuda", "cudnn"] }
candle-core = { git = "https://github.com/slckl/candle.git", features = ["cuda", "cudnn"], rev = "e3fd0da"}
candle-nn = { git = "https://github.com/slckl/candle.git", features = ["cuda", "cudnn"], rev = "e3fd0da"}
anyhow = "1.0.100"

[features]
default = []
