[package]
name = "candle_rf_detr"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = { version = "0.2.32" }
anyhow = "1.0.100"
candle-core = { git = "https://github.com/slckl/candle.git", features = ["cuda", "cudnn"] }
candle-nn = { git = "https://github.com/slckl/candle.git", features = ["cuda", "cudnn"] }
candle-transformers = { git = "https://github.com/slckl/candle.git", features = ["cuda", "cudnn"] }
clap = { version = "4.5.53", features = ["derive"] }
hf-hub = { version = "0.4.3" }
image = { version = "0.25.9" }
imageproc = { version = "0.25.0" }
tracing = "0.1.44"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.22"

[features]
default = []
mkl = []
accelerate = []
