[package]
name = "candle_rf_detr"
version = "0.1.0"
edition = "2021"

[dependencies]
cocotools = { path = "../cocotools", features = ["serde"] }
# external
ab_glyph = { version = "0.2.32" }
anyhow = "1.0.100"
candle-core = { git = "https://github.com/slckl/candle.git", features = ["cuda", "cudnn"] }
candle-nn = { git = "https://github.com/slckl/candle.git", features = ["cuda", "cudnn"] }
candle-transformers = { git = "https://github.com/slckl/candle.git", features = ["cuda", "cudnn"] }
clap = { version = "4.5.53", features = ["derive"] }
hf-hub = { version = "0.4.3" }
image = { version = "0.25.9" }
imageproc = { version = "0.25.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[dev-dependencies]
ndarray = "0.17.1"
ndarray-npy = "0.10.0"

[features]
default = []
mkl = []
accelerate = []
